style: fixing gap between header and home container

--- a/scrimba-advanced_react-course/routing/index.css
+++ b/scrimba-advanced_react-course/routing/index.css
@@ -5,12 +5,14 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: Inter, sans-serif;
 }
 
 header {
     background-color: #FFF7ED;
     display: flex;
     align-items: center;
+    padding: 1rem;
 }
 
 .home-link {
@@ -27,7 +29,6 @@ nav {
 
 nav > a {
     text-decoration: none;
-    font-family: sans-serif;
     font-size: 1rem;
     margin: 1rem;
     color: #4D4D4D;
@@ -39,10 +40,21 @@ nav > a {
 }
 
 .home-container {
-    margin-top: 5rem;
+    background: linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url("../assets/images/home-hero.png") no-repeat center center;
+    width: 50rem;
+    min-height: 20rem;
+    margin: auto;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    align-items: center;
 }
 
-.home-container > h1 {
-    width: 40rem;
-    margin: auto;
+.home-container > * {
+    width: 80%;
+}
+
+.home-hero-image {
+    width:100%;
 }
